--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "node": "16.x"
   },
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "./node_modules/.bin/netlify-lambda serve src",
-    "build": "./node_modules/.bin/netlify-lambda build src"
+    "dev": "node index.js"
   },
   "keywords": [],
   "author": "",
