--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "16.x"
   },
   "scripts": {
-    "dev": "node index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
