--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PORT=5000
 DB_URL=mongodb+srv://admin:admin@cluster0.pzhtqdb.mongodb.net/?retryWrites=true&w=majority
 JWT_ACCESS_KEY=secretkey123secret_key_access
 JWT_REFRESH_KEY=secretkey123secret_key_refresh
-SERVER_URL=http://localhost:5000
-CLIENT_URL=http://localhost:3000
+SERVER_URL=https://todo-backend-mu.vercel.app
+CLIENT_URL=https://todo-frontend-chi.vercel.app
